@startuml Presa VS Cazador

class Juego
{
    -Sonido sonido
    -RenderWindow ventana
    -Jugador jugador
    -vector<Cazador> cazador
    -Clock reloj
    -Font fuente
    -Text textoTiempo
    -Text textoPuntos
    -Text textoReiniciar
    -Text textotexturas
    -Text textoUltimaPuntuacion
    -Text textoPapeada
    -Text textovictoria
    -Text textovictoria2

    -int puntacion
    -int ultimaPuntuacion

    -Time tiempoAparicionUltimoCazador
    -Texture texturaCazador
    -Texture texturaJugador
    -Texture texturagameover
    -Texture backT
    -Texture texturaMamalon

    -Sprite back
    -Sprite texturaGAMEOVER
    -Sprite spriteMamalon
    +bool musicaFondoReproducida
    +bool musicaGameOverReproducida
    +bool musicaVictoriaReproducida
    +bool gameOver
    +bool victoria
    +Juego()


    -void ProcesarEventos();
    -void Actualizar(deltaTiempo);
    -void Dibujar();
    -void AparecerCazador();

    -ventana
    -cazador
    -jugador
    -reloj
    -fuente
    -textoTiempo
    -textoPuntos
    -textoReiniciar
    -textoUltimaPuntuacion
    -textoAparicionUltimoCazador
    -int puntuacion
    -int ultimaPuntuacion
    -bool gameOver

    +void Iniciar()
    +void ReinciarJuego()
    +void ChecarVictoria()
    +void GestionarMusica()
}

class Cazador
{
    -circulo
    -float velocidad

    +Cazador(float velocidad)
    +void Actualizar(posicionPresa,deltaTiempo)
    +void Dibujar(ventana)
    +ObtenerBordes()
}

class Jugador
{
    -circulo
    +bool gameOverMusicaReproducida
    +Jugador()
    +void Entrada()
    +void Dibujar(ventana)
    +ObtenerBordes()
    +ObtenerPosicion()
}

class Sonido
{
    -_musicaFondo
    -_musicaGameOver
    -_musicavictoria
    -_sonidoFondo
    -_sonidoGameOver
    -_sonidovictoria

    +void CargarMusicaFondo()
    +void CargarMusicaGameOver()
    +void CargarMusicaVictoria()

    +void ReproducirMusica()
    +void ReproducirMusicaGameOver()
    +void ReproducirMusicaVictoria()

    +void DetenerMusicaVictoria()
    +void DetenerMusica()
    +void DetenerMusicaGameOver()
}

Jugador "1" o-- "1" Juego

Juego "1" *-- "*" Cazador

Juego "1" <-- "3" Sonido